  * add_stubs(model, {:method => value}) is deprecated. Use model.stub!(:method => value) instead.

* 2 major enhancements

  * support controller and action path params in view specs (Mike Vincent).
  * use ActiveSupport::TestCase when available, else Test::Unit::TestCase - supports Rails 1.2.6 (Brandon Keepers). Closes #620.

* 3 minor enhancements

  * improve rdoc for render_template (Patch from Andrew Premdas). Fixes #571.
  * use more liberal globs to allow for specs in symlinked dirs (Martin Luder). Closes #361.
  * Enable loading fixtures from arbitrary locations (Jacek Becela). Closes #464.
  
* 6 bug fixes

  * Attempt to load application_controller before falling back to application (Geoff Garside). Closes #626.
  * Include _id and reduce quoting of default values in view specs (Steen Lehmann). Closes #598.
  * Record calls to render and check rendered[:template] and rendered[:partial] for edge rails (> v2.2.2). Closes #633.
  * config.gem 'rspec' can't be unpacked. Closes #629.
  * spec_server not working with Rails 2.2.2 (Andreas Wolff). Closes #631.
  * redirect_to doesn't work with http method constrained urls (Maxim Kulkin). Closes #648.

=== Version 1.1.11 / 2008-10-24

* No changes to rspec-rails - release to align with bug-fix release in rspec ... again :(

=== Version 1.1.10 / 2008-10-24

* No changes to rspec-rails - release to align with bug-fix release in rspec

=== Version 1.1.9 / 2008-10-20

* 4 bug fixes

  * require 'rubygems' in script/spec
  * fix failure message for error_on and errors_on (Patch from Mike Vincent). Fixes #566.
  * fix issues that arise in view spec if passing actual template name to render (Patch from Mike Vincent). Fixes #551.
  * fixed bug accessing assigns from helper examples

=== Version 1.1.8 / 2008-10-03

* 2 bug fixes

  * correctly handle assigns that are false. Fixes #552.
  * ensure that NotYetImplemented examples report as pending (fixed in rspec, not rspec-rails). Fixes #553.
  