@@ -5,9 +5,9 @@ module Spec
         MAJOR  = 1
         MINOR  = 1
         TINY   = 11
-        MINESCULE = 6
+        MINESCULE = 7
 
-        STRING = [MAJOR, MINOR, TINY, MINESCULE].join('.')
+        STRING = [MAJOR, MINOR, TINY, MINESCULE].compact.join('.')
 
         SUMMARY = "rspec-rails #{STRING}"
       end
