@@ -35,4 +35,12 @@ module ExplicitHelper
   def flash_thing
     flash[:thing]
   end
+  
+  def method_using_output_buffer
+    concat("the_text_from_concat")
+  end
+  
+  def method_using_template
+    update_page { |p| p["#some_id"].replace_html "" }
+  end
 end
