@@ -143,6 +143,31 @@ module Spec
           assigns[:addend].should == 3
         end
       end
+      
+      describe HelperExampleGroup, "using a helper that uses output_buffer inside helper", :type => :helper do
+        helper_name :explicit
+
+        it "should not raise an error" do
+          lambda { method_using_output_buffer }.should_not raise_error
+        end
+
+        it "should put the output in the output_buffer" do
+          method_using_output_buffer
+          output_buffer.should == "the_text_from_concat"
+        end
+      end
+      
+      describe HelperExampleGroup, "using a helper that tries to access @template", :type => :helper do
+        helper_name :explicit
+
+        it "should not raise an error" do
+          lambda { method_using_template }.should_not raise_error
+        end
+
+        it "should have the correct output" do
+          method_using_template.should have_text(/#some_id/)
+        end
+      end
     end
   end
 end
