@@ -9,6 +9,7 @@
 
   * support controller and action path params in view specs (Mike Vincent).
   * use ActiveSupport::TestCase when available, else Test::Unit::TestCase - supports Rails 1.2.6 (Brandon Keepers). Closes #620.
+  * support form tag helpers in helpers (Ivo Dancet). Closes #641.
 
 * 3 minor enhancements
 
